--- a/config/config.json
+++ b/config/config.json
@@ -10,14 +10,14 @@
   "test": {
     "username": "root",
     "password": "Rango941001top@@@",
-    "database": "instagram_dm_bot",
+    "database": "instagram_dev",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
     "username": "root",
     "password": "",
-    "database": "instagram_dm_bot",
+    "database": "instagram_dev",
     "host": "127.0.0.1",
     "dialect": "postgres"
   }
