--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "express": "~4.16.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.16.1",
+    "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
+    "https": "^1.0.0",
     "instagram-private-api": "^0.10.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
