--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.19.0",
     "child_process": "^1.0.2",
     "cookie-parser": "~1.4.4",
+    "cron": "^1.7.1",
     "debug": "~2.6.9",
     "dotenv": "^8.0.0",
     "ejs": "^2.6.1",
@@ -24,6 +25,8 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
     "morgan": "~1.9.1",
+    "node-cron": "^2.0.3",
+    "node-schedule": "^1.3.2",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "path": "^0.12.7",
