updated home page

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ PUSHER_APP_ID='822821'
 PUSHER_APP_KEY='a8bc919ab3d65a7c3875'
 PUSHER_APP_SECRET='f1b0ba564d51c9739df6'
 PUSHER_APP_CLUSTER='us3'
+TO_EMAIL='rangotoptalent@gmail.com'
+TO_EMAIL_PASS='Rango941001top@@@'
