updated home front end

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ PUSHER_APP_SECRET='f1b0ba564d51c9739df6'
 PUSHER_APP_CLUSTER='us3'
 FROM_EMAIL='rangotoptalent@gmail.com'
 FROM_EMAIL_PASS='Rango941001top@@@'
-TO_EMAIL="rango941001@outlook.com"
+TO_EMAIL="support@metamedias.co"
